[metadata]
description-file=README.md
[aliases]
test=pytest

[tool:pytest]
norecursedirs=dist docs build .tox deploy
addopts = --flake8 --pylint
# NOTE: do not specify testpaths here, because pytest needs
# to look at *all* of the python code, not just the tests
# for flake8 and pylint to do their jobs.
#  testpaths = tests  <- do not re-add, disables linting in non-tests
flake8-ignore =
    tests/* E402
    tests/* F841

[yapf]
indent_width = 4
column_limit = 77
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
dedent_closing_brackets = true
i18n_comment = NOQA
